loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:13: error: not found: value biscui
  if (biscui=t<2) {
      ^